# globalign

./: .pre-commit-config.yaml  CITATION.bib  README.md  example.py  pyproject.toml  requirements.txt
Learn2Reg/: COMULISSHGBF_2024.py
examples/: example.py
examples/Learn2Reg/: COMULISSHGBF_2024.py
src/globalign/: __init__.py  globalign.py
src/nd2cat/: __init__.py  nd2cat.py
src/transformations/: __init__.py  transformations.py
tests/globalign/: grid_angles_test.py  random_angles_test.py
