[project]
name = "globalign"
version = "1.0.3"
description = "Fast global mutual information-based rigid alignment in the Fourier domain"
authors = [{ name = "Johan Öfverstedt" }]
readme = "README.md"
license = "MIT"
keywords = ["image", "registration", "2d", "fft"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]

dependencies = [
  "numpy>=1.22.0",
  "torch>=1.11.0",
  "torchvision>=0.12.0",
  "scikit-learn>=1.1.0",
  "scikit-image>=0.19.0",
]

[project.urls]
Documentation = "https://github.com/jnk22/globalign#readme"
Issues = "https://github.com/jnk22/globalign/issues"
Source = "https://github.com/jnk22/globalign"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
default-groups = ["dev", "test", "lint"]

[dependency-groups]
dev = [
  "typing-extensions>=4.13.2",
]
test = [
  "hypothesis==6.131.10",
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "pytest-xdist==3.6.1",
  "tox-uv==1.25.0",
]
lint = [
  "ruff==0.11.7",
  "mypy==1.15.0",
  "pyright==1.1.400",
  "vulture==2.14",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401", # Allow 'Any' type until all arguments are properly typed
  "COM812",
  "D203",
  "D213",
  "ERA001",
  "ISC001",
  "T201",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]
"tests/*.py" = ["INP001", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-config=pyproject.toml --doctest-modules --strict-markers"

[tool.coverage.report]
exclude_lines = ["if (typing\\.)?TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.tox]
skipsdist = true
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
passenv = ["PYTHON_VERSION"]
allowlist_externals = ["uv"]
commands = [
  [
    "uv",
    "run",
    "--no-dev",
    "--group",
    "test",
    "--python",
    "{envpython}",
    "pytest",
    "--doctest-modules",
  ],
]

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.vulture]
paths = ["src"]
min_confidence = 90
make_whitelist = true
sort_by_size = true
